--- a/templates/weather.html
+++ b/templates/weather.html
@@ -18,39 +18,43 @@
 
 <br>
 <form method="POST">
-
-
-    <div class="input-group flex-nowrap">
-        <input type="text" class="form-control" placeholder="Ingrese la ciudad " aria-label="city"
-            aria-describedby="addon-wrapping">
-        <button type="button" class="btn btn-secondary">Buscar</button>
+    <div class="form-floating">
+        <input class="form-control" name="city" type="text" placeholder="Nombre de la Ciudad" required>
+        <label for="floatingInputValue">Escribe el nombre de la cuidad</label>
+        <br>
+        <div class="col-12">
+            <button class="btn btn-primary" type="submit">Agregar Ciudad</button>
+        </div>
     </div>
 </form>
+</div>
+</section>
 <br>
 <div class="row">
-    <div class="col-sm-6 mb-3 mb-sm-0">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Guayaquil</h5><i class="bi bi-sun-fill"></i>
-
-                <p class="card-text">despejado</p>
-                <p class="card-text"> 31°/23° sensacion termica</p>
-                <a href="#" class="btn btn-danger"><i class="bi bi-trash"></i></a>
-            </div>
-        </div>
+<div class="col-sm-6 mb-3 mb-sm-0">
+<div class="card">
+    <div class="card-body">
+        <img src="http://openweathermap.org/img/w/{{ clima.icono }}.png" alt="...">
+        <h5 class="card-title">cuidad :{{clima.ciudad}}</h5>
+        <p class="card-text">descripcion : {{clima.descripcion}}</p> 
+        <p class="card-text">temperatura :{{clima.temperatura}}</p>
+        <p class="card-text">MUY CALUSORO</p>
+        <a href="#" class="btn btn-danger"><i class="bi bi-trash"></i></a>
     </div>
-    <br>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Quito </h5><i class="bi bi-cloud-rain"></i>
-                <p class="card-text">Lluvioso</p>
-                <p class="card-text">20°/20°sensacion humeda</p>
-
-                <a href="#" class="btn btn-danger"><i class="bi bi-trash"></i></a>
-            </div>
-        </div>
+</div>
+</div>
+<div class="col-sm-6">
+<div class="card">
+    <div class="card-body">
+        <img src="http://openweathermap.org/img/w/{{ clima.icono }}.png" alt="...">
+        <h5 class="card-title">{{clima.ciudad}}</h5>
+        <p class="card-text">{{clima.descripcion}}</p> 
+        <p class="card-text">{{clima.temperatura}}</p>
+        <p class="card-text">MUY CALUSORO</p>
+        <a href="#" class="btn btn-danger"><i class="bi bi-trash"></i></a>
     </div>
+</div>
+</div>
 </div>
 </body>
 
